@@ -16,7 +16,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 -}
 
-module AnyDBMtest(mf, generic_test, tests) where
+module AnyDBMtest(mf, generic_persist_test, generic_test, tests) where
 import HUnit
 import MissingH.List
 import MissingH.IO.HVFS
